--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,20 @@
+import proguard.gradle.ProGuardTask
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.guardsquare:proguard-gradle:7.4.1'
+    }
+}
 plugins {
     id 'java'
     id 'com.rikonardo.papermake' version '1.0.6'
 }
 
 group = 'com.jodexindustries.donatecase'
-version = '2.1.5.2'
+version = '2.1.5.3'
 
 repositories {
     mavenCentral()
@@ -38,14 +48,37 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.jetbrains:annotations:24.0.0'
-    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
-    compileOnly "me.clip:placeholderapi:2.11.2"
-    compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
-    compileOnly "de.likewhat.customheads:CustomHeads:3.0.7"
-    compileOnly 'com.mojang:authlib:1.5.25'
+    implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT'
+    implementation "com.github.MilkBowl:VaultAPI:1.7"
+    implementation "me.clip:placeholderapi:2.11.2"
+    implementation "com.arcaniax:HeadDatabase-API:1.3.1"
+    implementation "de.likewhat.customheads:CustomHeads:3.0.7"
+    implementation 'com.github.LoneDev6:API-ItemsAdder:3.6.1'
+    implementation 'com.mojang:authlib:1.5.25'
+
 }
+
+def dependsDir = "${buildDir}/libs/dependencies/"
+
+configurations.implementation.setCanBeResolved(true)
+
+tasks.register('copyDepends', Copy) {
+    from configurations.implementation
+    into "${dependsDir}"
+}
+
+tasks.register('proguard', ProGuardTask) {
+    configuration file('proguard.conf')
+    injars sourceSets.main.output
+    libraryjars files("D:/Java/Java11/jmods/")
+    libraryjars files(dependsDir)
+    verbose
+    outjars "${buildDir}/libs/${project.name}-${version}-obf.jar"
+
+}
+
+build.dependsOn proguard
 
 def targetJavaVersion = 11
 java {
