--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -24,3 +24,4 @@ DonatCase:
     default: 0
   NoKeyWarningSound: ENTITY_ENDERMAN_TELEPORT
   DateFormat: "dd.MM HH:mm:ss"
+  AddonsHelp: true # Show help list for addons commands?
