--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 }
 
 group = 'com.jodexindustries.donatecase'
-version = '2.1.6.3'
+version = '2.1.6.5'
 
 repositories {
     mavenCentral()
@@ -33,6 +33,7 @@ repositories {
             includeGroup 'org.spigotmc'
         }
     }
+    maven { url "https://repo.dmulloy2.net/repository/public/" }
     maven {
         name = 'authlib'
         url = 'https://papermc.io/repo/repository/maven-releases/'
@@ -56,7 +57,8 @@ dependencies {
     implementation "de.likewhat.customheads:CustomHeads:3.0.7"
     implementation 'com.github.LoneDev6:API-ItemsAdder:3.6.1'
     implementation 'com.mojang:authlib:1.5.25'
-
+    implementation 'com.github.justADeni:StandAPI:v1.8'
+    implementation 'com.comphenix.protocol:ProtocolLib:5.1.0'
 }
 
 def dependsDir = "${buildDir}/libs/dependencies/"
