--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,5 +1,12 @@
 config: "1.3"
-Shape: #Soon.....
+Shape:
+  Particle: # 1.13+
+    Orange:
+      Size: 1.0
+      Rgb: 255, 165, 0
+    White:
+      Size: 1.0
+      Rgb: 255, 255, 255
 
 Rainly:
   FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
