--- a/proguard.conf
+++ b/proguard.conf
@@ -5,6 +5,8 @@
 -useuniqueclassmembernames
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,LocalVariable*Table,*Annotation*,Synthetic,EnclosingMethod
 -dontwarn com.jodexindustries.donatecase.tools.MojangHeads
+-dontwarn com.comphenix.**
+-dontwarn net.bytebuddy.**
 
 
 
