--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
 }
 
 group = 'com.jodexindustries.donatecase'
-version = '2.1.6.9'
+version = '2.1.7.0'
 
 repositories {
     mavenCentral()
@@ -64,7 +64,6 @@ dependencies {
     compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.1'
     compileOnly 'com.mojang:authlib:1.5.25'
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0-SNAPSHOT'
-    implementation 'net.byteflux:libby-bukkit:1.3.0'
     compileOnly 'it.unimi.dsi:fastutil:8.5.12'
 
 }
@@ -90,7 +89,7 @@ tasks.register('proguard', ProGuardTask) {
 
 
 
-//build.dependsOn proguard
+build.dependsOn proguard
 
 def targetJavaVersion = 11
 java {
