--- a/src/main/resources/cases/case.yml
+++ b/src/main/resources/cases/case.yml
@@ -4,7 +4,8 @@ case:
   Sound:
     Volume: 10
     Pitch: 5
-  Title: '&c&lDonate-&a&lCase' # If you want to make another case, then the Title needs to be changed
+  Title: "&c&lDonate-&a&lCase" # Title in GUI
+  DisplayName: "&c&lDonate-&a&lCase" # Name for placeholders
   Gui: # see more about items configuring -> https://wiki.jodexindustries.space/docs/DonateCase/items-settings
     Size: 45
     Items:
