--- a/proguard.conf
+++ b/proguard.conf
@@ -8,6 +8,7 @@
 -dontwarn com.jodexindustries.donatecase.tools.animations.**
 -dontwarn com.comphenix.**
 -dontwarn net.bytebuddy.**
+-dontwarn com.jodexindustries.donatecase.tools.Tools
 
 
 
