--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,5 +1,6 @@
 config: "1.3"
 Shape:
+  SmallArmorStand: true
   Particle: # 1.13+
     Orange:
       Size: 1.0
@@ -9,6 +10,7 @@ Shape:
       Rgb: 255, 255, 255
 
 Rainly:
+  SmallArmorStand: true
   FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # FALLING_WATER
   # FALLING_LAVA
@@ -18,6 +20,7 @@ Rainly:
   # FALLING_OBSIDIAN_TEAR
 
 Firework:
+  SmallArmorStand: true
   Power: 0 # Firework power
   FireworkColors:
     - RED
@@ -26,6 +29,7 @@ Firework:
     - YELLOW
 
 Wheel:
+  SmallArmorStand: true
   ItemsCount: 6
   CircleSpeed: 0.5
   CircleRadius: 1.5
@@ -38,6 +42,7 @@ Wheel:
     Pitch: 1
 
 FullWheel:
+  SmallArmorStand: true
   CircleSpeed: 0.5
   CircleRadius: 1.5
   LiftingAlongY: 0
