--- a/src/main/resources/cases/case.yml
+++ b/src/main/resources/cases/case.yml
@@ -50,6 +50,8 @@ case:
         - '[command] lp user %player% parent set %group%'
         - '[title] &aCongratulations!;&5you won %groupdisplayname%'
         - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
       RandomActions: # GiveType: RANDOM
         first:
           Chance: 50
