--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,9 @@ softdepend:
   - CustomHeads
   - ProtocolLib
   - HeadDataBase
+  - DecentHolograms
+  - CMI
+  - HolographicDisplays
 api-version: 1.13
 commands:
   donatecase:
