--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: DonateCase
-main: com.jodexindustries.donatecase.dc.Main
+main: com.jodexindustries.donatecase.DonateCase
 author: _Jodex__
 version: '${version}'
 website: "https://jodexindustries.space/"
