--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,12 @@ buildscript {
 }
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'com.rikonardo.papermake' version '1.0.6'
 }
 
 group = 'com.jodexindustries.donatecase'
-version = '2.1.9.5'
+version = '2.1.9.6'
 
 repositories {
     mavenCentral()
@@ -63,9 +64,11 @@ dependencies {
     compileOnly fileTree("libs").include("*.jar")
     compileOnly 'me.filoghost.holographicdisplays:holographicdisplays-api:3.0.0'
     compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
-
+    implementation 'net.byteflux:libby-bukkit:1.3.0'
 
 }
+build.dependsOn(shadowJar);
+
 
 def targetJavaVersion = 11
 java {
@@ -76,6 +79,8 @@ java {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
 }
+
+tasks.jar.enabled = false
 
 tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
@@ -90,4 +95,9 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+shadowJar {
+    archiveBaseName.set(project.name)
+    archiveClassifier.set('')
+    archiveVersion.set(project.version)
 }
