--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,5 +1,6 @@
 config: "1.3"
 Shape:
+  ItemSlot: HEAD
   SmallArmorStand: true
   Particle: # 1.13+
     Orange:
@@ -10,6 +11,7 @@ Shape:
       Rgb: 255, 255, 255
 
 Rainly:
+  ItemSlot: HEAD
   SmallArmorStand: true
   FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # FALLING_WATER
@@ -20,6 +22,7 @@ Rainly:
   # FALLING_OBSIDIAN_TEAR
 
 Firework:
+  ItemSlot: HEAD
   SmallArmorStand: true
   Power: 0 # Firework power
   FireworkColors:
@@ -29,6 +32,7 @@ Firework:
     - YELLOW
 
 Wheel:
+  ItemSlot: HEAD
   SmallArmorStand: true
   ItemsCount: 6
   CircleSpeed: 0.5
@@ -42,6 +46,7 @@ Wheel:
     Pitch: 1
 
 FullWheel:
+  ItemSlot: HEAD
   SmallArmorStand: true
   CircleSpeed: 0.5
   CircleRadius: 1.5
