--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,6 +1,6 @@
 config: "1.3"
 Shape:
-  ItemSlot: HEAD
+  ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
   Particle: # 1.13+
     Orange:
@@ -11,7 +11,7 @@ Shape:
       Rgb: 255, 255, 255
 
 Rainly:
-  ItemSlot: HEAD
+  ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
   FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # FALLING_WATER
@@ -22,7 +22,7 @@ Rainly:
   # FALLING_OBSIDIAN_TEAR
 
 Firework:
-  ItemSlot: HEAD
+  ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
   Power: 0 # Firework power
   FireworkColors:
@@ -32,7 +32,7 @@ Firework:
     - YELLOW
 
 Wheel:
-  ItemSlot: HEAD
+  ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
   ItemsCount: 6
   CircleSpeed: 0.5
@@ -46,7 +46,7 @@ Wheel:
     Pitch: 1
 
 FullWheel:
-  ItemSlot: HEAD
+  ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
   CircleSpeed: 0.5
   CircleRadius: 1.5
