--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -2,6 +2,13 @@ config: "1.3"
 Shape:
   ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
+  Pose:
+    Head: 0, 0, 0
+    Body: 0, 0, 0
+    RightArm: 0, 0, 0
+    LeftArm: 0, 0, 0
+    RightLeg: 0, 0, 0
+    LeftLeg: 0, 0, 0
   Particle: # 1.13+
     Orange:
       Size: 1.0
@@ -13,6 +20,13 @@ Shape:
 Rainly:
   ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
+  Pose:
+    Head: 0, 0, 0
+    Body: 0, 0, 0
+    RightArm: 0, 0, 0
+    LeftArm: 0, 0, 0
+    RightLeg: 0, 0, 0
+    LeftLeg: 0, 0, 0
   FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # FALLING_WATER
   # FALLING_LAVA
@@ -24,6 +38,13 @@ Rainly:
 Firework:
   ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
+  Pose:
+    Head: 0, 0, 0
+    Body: 0, 0, 0
+    RightArm: 0, 0, 0
+    LeftArm: 0, 0, 0
+    RightLeg: 0, 0, 0
+    LeftLeg: 0, 0, 0
   Power: 0 # Firework power
   FireworkColors:
     - RED
@@ -34,6 +55,13 @@ Firework:
 Wheel:
   ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
+  Pose:
+    Head: 0, 0, 0
+    Body: 0, 0, 0
+    RightArm: 0, 0, 0
+    LeftArm: 0, 0, 0
+    RightLeg: 0, 0, 0
+    LeftLeg: 0, 0, 0
   ItemsCount: 6
   CircleSpeed: 0.5
   CircleRadius: 1.5
@@ -48,6 +76,13 @@ Wheel:
 FullWheel:
   ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
   SmallArmorStand: true
+  Pose:
+    Head: 0, 0, 0
+    Body: 0, 0, 0
+    RightArm: 0, 0, 0
+    LeftArm: 0, 0, 0
+    RightLeg: 0, 0, 0
+    LeftLeg: 0, 0, 0
   CircleSpeed: 0.5
   CircleRadius: 1.5
   LiftingAlongY: 0
