Added PermissionDriver (LuckPerms or Vault)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ version: '${version}'
 website: "https://jodexindustries.space/"
 softdepend:
   - Vault
+  - LuckPerms
   - PlaceholderAPI
   - CustomHeads
   - ProtocolLib
