--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compileOnly 'com.github.decentsoftware-eu:decentholograms:2.8.6'
     compileOnly fileTree("libs").include("*.jar")
     compileOnly 'me.filoghost.holographicdisplays:holographicdisplays-api:3.0.0'
+    compileOnly 'net.luckperms:api:5.4'
     compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
     implementation 'net.byteflux:libby-bukkit:1.3.0'
 
