--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'maven-publish'
 
 
 group = 'com.jodexindustries.donatecase'
-version = '2.2.0.1'
+version = '2.2.0.2'
 
 repositories {
     mavenCentral()
@@ -126,6 +126,7 @@ publishing {
             artifactId = "DonateCaseAPI"
             version = project.version
             from components.java
+            artifact shadowJar
         }
 
     }
