--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'com.rikonardo.papermake' version '1.0.6'
 }
-apply plugin: 'maven-publish'
 
 
 group = 'com.jodexindustries.donatecase'
@@ -67,7 +66,7 @@ dependencies {
     compileOnly 'me.filoghost.holographicdisplays:holographicdisplays-api:3.0.0'
     compileOnly 'net.luckperms:api:5.4'
     compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
-    implementation 'net.byteflux:libby-bukkit:1.3.0'
+    implementation ('net.byteflux:libby-bukkit:1.3.0')
 
 }
 build.dependsOn(shadowJar);
@@ -84,8 +83,14 @@ java {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
 }
-
+jar {
+    archiveClassifier.set("min")
+}
+tasks.withType(GenerateModuleMetadata) {
+    enabled = false
+}
 tasks.jar.enabled = false
+
 
 tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
@@ -106,32 +111,4 @@ shadowJar {
     archiveClassifier.set(null)
     archiveVersion.set(project.version)
 
-}
-
-
-publishing {
-    repositories {
-        maven {
-            name = "JodexIndustries"
-            url = "https://repo.jodexindustries.space/releases"
-            credentials(PasswordCredentials)
-            authentication {
-                basic(BasicAuthentication)
-            }
-        }
-    }
-    publications {
-        maven(MavenPublication) {
-            groupId = "com.jodexindustries.donatecase"
-            artifactId = "DonateCaseAPI"
-            version = project.version
-            from components.java
-            artifact shadowJar
-        }
-
-    }
-}
-javadoc {
-    options.links('https://docs.oracle.com/en/java/javase/11/docs/api/', "https://helpch.at/docs/1.16.5/")
-    source = sourceSets.main.allJava
 }
