--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.jodexindustries.jodexindustries'
-version = '2.2.0.1'
+version = '2.2.0.8'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ publishing {
     repositories {
         maven {
             name = "JodexIndustries"
-            url = "https://repo.jodexindustries.space/releases"
+            url = "https://repo.jodexindustries.xyz/releases"
             credentials(PasswordCredentials)
             authentication {
                 basic(BasicAuthentication)
@@ -40,7 +40,7 @@ publishing {
         maven(MavenPublication) {
             groupId = "com.jodexindustries.donatecase"
             artifactId = "DonateCaseAPI"
-            version = "2.2.0.1"
+            version = this.version;
             from components.java
         }
 
