--- a/TestAddon/build.gradle
+++ b/TestAddon/build.gradle
@@ -18,4 +18,6 @@ repositories {
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly fileTree("libs").include("*.jar")
+
 }
