compile with java 11

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,9 +16,16 @@ repositories {
         }
     }
 }
+def targetJavaVersion = 11
 java {
     withSourcesJar()
     withJavadocJar()
+    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
+    if (JavaVersion.current() < javaVersion) {
+        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    }
 }
 
 dependencies {
