--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
 }
 plugins {
     id 'java'
+    id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'com.rikonardo.papermake' version '1.0.6'
 }
 
 
 group = 'com.jodexindustries.donatecase'
+var api = "2.2.1.8"
 version = '2.2.1.8'
 
 repositories {
@@ -74,6 +76,7 @@ build.dependsOn(shadowJar);
 def targetJavaVersion = 8
 java {
     withSourcesJar()
+    withJavadocJar()
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
@@ -108,4 +111,40 @@ shadowJar {
     archiveBaseName.set(project.name)
     archiveClassifier.set(null)
     archiveVersion.set(project.version)
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "JodexIndustries"
+            url = "https://repo.jodexindustries.xyz/releases"
+            credentials(PasswordCredentials)
+            authentication {
+                basic(BasicAuthentication)
+            }
+        }
+    }
+    publications {
+        maven(MavenPublication) {
+            groupId = "com.jodexindustries.donatecase"
+            artifactId = "DonateCaseAPI"
+            version = api
+            from components.java
+        }
+
+    }
+}
+javadoc {
+    options.links('https://docs.oracle.com/en/java/javase/11/docs/api/', "https://helpch.at/docs/1.16.5/")
+    source = sourceSets.main.allJava
+}
+tasks.register('replaceVersionInREADME') {
+    // Maven
+    ant.replaceregexp(match: '<version>([0-9\\.]+)</version>', replace: "<version>${api}</version>", flags: 'g', byline: true) {
+        fileset(dir: '.', includes: 'README.md')
+    }
+    // Gradle
+    ant.replaceregexp(match: 'com\\.jodexindustries\\.donatecase\\:DonateCaseAPI\\:([0-9\\.]+)', replace: "com.jodexindustries.donatecase:DonateCaseAPI:${api}", flags: 'g', byline: true) {
+        fileset(dir: '.', includes: 'README.md')
+    }
 }
