Add Multiverse-Core and MultiWorld as softdepend

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,6 +13,8 @@ softdepend:
   - DecentHolograms
   - CMI
   - HolographicDisplays
+  - Multiverse-Core
+  - MultiWorld
 api-version: 1.13
 commands:
   donatecase:
