--- a/src/main/resources/resources/Config.yml
+++ b/src/main/resources/resources/Config.yml
@@ -14,7 +14,8 @@ DonatCase:
   Languages: en #ru/en/ua
   #Are messages to the player about adding keys included?
   SetKeysTargetMessage: true
-  PermissionDriver: luckperms
+  HologramDriver: DecentHolograms # CMI, DecentHolograms or HolographicDisplays
+  PermissionDriver: luckperms # luckperms or vault
   # Only if Vault enabled
   LevelGroup: false #Enable if you use PermissionEX, if you use LuckPerms, don't enable if you use "parent add"
   LevelGroups:
