--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,7 @@ publishing {
     }
 }
 javadoc {
-    options.links('https://docs.oracle.com/en/java/javase/11/docs/api/', "https://helpch.at/docs/1.16.5/")
+    options.links('https://docs.oracle.com/en/java/javase/11/docs/api/', "https://helpch.at/docs/1.16.5/", "https://javadoc.io/static/net.luckperms/api/5.4/", "https://milkbowl.github.io/VaultAPI/")
     source = sourceSets.main.allJava
 }
 tasks.register('replaceVersionInREADME') {
