--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
-    -   source: /src/main/resources/resources/lang/en_US.yml
-        translation: /src/main/resources/resources/lang/%locale_with_underscore%.yml
+  - source: /src/main/resources/resources/lang/en_US.yml
+    translation: /src/main/resources/resources/lang/%locale_with_underscore%.yml
+bundles:
+  - 2
