--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 
 group = 'com.jodexindustries.donatecase'
 var api = "2.2.2.9"
-version = '2.2.2.9'
+bump version = '2.2.3.0'
 
 repositories {
     mavenCentral()
