add config version for cases

--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -1,3 +1,4 @@
+config: 1.0
 case:
   Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL, FULLWHEEL see: https://wiki.jodexindustries.xyz/docs/DonateCase/animations
   AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
