--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,7 +15,8 @@ softdepend:
   - HolographicDisplays
   - Multiverse-Core
   - MultiWorld
-api-version: 1.13
+  - packetevents
+api-version: 1.16
 commands:
   donatecase:
     aliases: [dc]
