--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,8 @@ repositories {
     }
     maven  { url 'https://repo.alessiodp.com/releases/' }
     maven  { url 'https://repo.mineinabyss.com/releases' }
-    maven {
-        url "https://repo.codemc.io/repository/maven-public/"
-    }
+    maven { url "https://repo.codemc.io/repository/maven-public/" }
+    maven { url 'https://repo.codemc.io/repository/maven-releases/' }
 
 }
 
@@ -67,7 +66,9 @@ dependencies {
     compileOnly 'me.filoghost.holographicdisplays:holographicdisplays-api:3.0.0'
     compileOnly 'net.luckperms:api:5.4'
     compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
-    implementation ('net.byteflux:libby-bukkit:1.3.0')
+    compileOnly 'com.github.retrooper:packetevents-spigot:2.4.0'
+    compileOnly 'com.github.Tofaa2.EntityLib:spigot:2.4.7-SNAPSHOT'
+    implementation 'net.byteflux:libby-bukkit:1.3.1'
 
 }
 build.dependsOn(shadowJar);
