--- a/src/main/resources/resources/Config.yml
+++ b/src/main/resources/resources/Config.yml
@@ -27,4 +27,4 @@ DonatCase:
   NoKeyWarningSound: ENTITY_ENDERMAN_TELEPORT
   DateFormat: "dd.MM HH:mm:ss"
   AddonsHelp: true # Show help list for addons commands?
-  UsePackets: false # don't change this
+  UsePackets: false # 1.18+ for using packets, you need to install packetevents plugin
