--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ repositories {
     maven  { url 'https://repo.mineinabyss.com/releases' }
     maven { url "https://repo.codemc.io/repository/maven-public/" }
     maven { url 'https://repo.codemc.io/repository/maven-releases/' }
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'}
 
 }
 
@@ -56,7 +57,7 @@ dependencies {
     compileOnly 'org.jetbrains:annotations:24.0.0'
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
-    compileOnly "me.clip:placeholderapi:2.11.2"
+    compileOnly "me.clip:placeholderapi:2.11.6"
     compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
     compileOnly "de.likewhat.customheads:CustomHeads:3.0.7"
     compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.1'
@@ -68,8 +69,7 @@ dependencies {
     compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
     compileOnly 'com.github.retrooper:packetevents-spigot:2.4.0'
     compileOnly 'com.github.Tofaa2.EntityLib:spigot:2.4.7-SNAPSHOT'
-    implementation 'net.byteflux:libby-bukkit:1.3.1'
-
+    implementation 'com.alessiodp.libby:libby-bukkit:2.0.0-SNAPSHOT'
 }
 build.dependsOn(shadowJar);
 
@@ -131,8 +131,19 @@ publishing {
             artifactId = "DonateCaseAPI"
             version = api
             from components.java
-        }
+            pom.withXml {
+                project.configurations.compileOnly.allDependencies.each { dep ->
+                    asNode().dependencies[0].appendNode('dependency').with {
+                        it.appendNode('groupId', dep.group)
+                        it.appendNode('artifactId', dep.name)
+                        it.appendNode('version', dep.version)
+                        it.appendNode('scope', 'provided')
+                    }
+                }
 
+            }
+
+        }
     }
 }
 javadoc {
