--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 
 
 group = 'com.jodexindustries.donatecase'
-var api = "2.2.3.9"
-version = '2.2.3.9'
+var api = "2.2.4.0"
+version = '2.2.4.0'
 
 repositories {
     mavenCentral()
@@ -147,7 +147,7 @@ publishing {
     }
 }
 javadoc {
-    options.links('https://docs.oracle.com/en/java/javase/11/docs/api/', "https://helpch.at/docs/1.16.5/", "https://javadoc.io/static/net.luckperms/api/5.4/", "https://milkbowl.github.io/VaultAPI/")
+    options.links('https://docs.oracle.com/javase/8/docs/api/', "https://helpch.at/docs/1.16.5/", "https://javadoc.io/static/net.luckperms/api/5.4/", "https://milkbowl.github.io/VaultAPI/")
     source = sourceSets.main.allJava
 }
 tasks.register('replaceVersionInREADME') {
