--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -1,4 +1,4 @@
-config: 1.0
+config: 1.1
 case:
   Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL, FULLWHEEL see: https://wiki.jodexindustries.xyz/docs/DonateCase/animations
   AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
@@ -15,6 +15,10 @@ case:
     # The message that will be displayed.
     Message:
       - '&6DonateCase'
+
+  NoKeyActions:
+    - "[message] &cYou don't have keys for this case. You can buy them here >>> &6JodexIndustries.com"
+    - "[sound] ENTITY_ENDERMAN_TELEPORT"
 
   LevelGroups: # delete all of this section, if you want to use default LevelGroups from Config.yml
     legend: 4
