--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -17,8 +17,10 @@ case:
     - "[sound] ENTITY_ENDERMAN_TELEPORT"
 
   LevelGroups: # delete all of this section, if you want to use default LevelGroups from Config.yml
-    legend: 4
-    deluxe: 3
+    ultra: 6
+    legend: 5
+    deluxe: 4
+    premium: 3
     vipplus: 2
     vip: 1
     default: 0
@@ -44,25 +46,27 @@ case:
         Lore:
         - '&6The case can be bought on the website: &cJodexIndustries.xyz'
         - ''
-        - '&7Keys: %keys%'
+        - '&7Keys: &e%keys%'
         - ''
         - '&6Drops:'
-        - '&7&l[&aVIP&7&l] - &b&n50%'
-        - '&7&l[&bVIP&6+&7&l] - &b&n25%'
-        - '&7&l[&5Deluxe&7&l] - &b&n15%'
-        - '&7&l[&dLegend&7&l] - &b&n10%'
+        - '&7[&eVIP&7] - &b&n30%'
+        - '&7[&bVIP&6+&7] - &b&n25%'
+        - '&7[&3Premium&7] - &b&n20%'
+        - '&7[&5Deluxe&7] - &b&n15%'
+        - '&7[&dLegend&7] - &b&n10%'
+        - '&7[&cUltra&7] - &b&n5%'
         - ''
         Slots: # or Slots: 0-10 (range)
           - 22
         Material: TRIPWIRE_HOOK # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
         Type: OPEN # or you can use OPEN_<anotherCaseName> for opening another case 
   Items:
-    VIP:
+    Vip:
       Group: vip
-      Chance: 50
+      Chance: 30
       Item:
-        ID: IRON_SWORD # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
-        DisplayName: '&7&l[&aVIP&7&l]'
+        ID: YELLOW_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        DisplayName: '&7[&eVIP&7]'
         Enchanted: false
       Index: 0
       GiveType: ONE # or RANDOM
@@ -84,12 +88,12 @@ case:
           Actions:
             - '[command] say something'
             - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
-    VIPPLUS:
+    VipPlus:
       Group: vipplus
       Chance: 25
       Item:
-        ID: GOLDEN_SWORD # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
-        DisplayName: '&7&l[&bVIP&6+&7&l]'
+        ID: LIGHT_BLUE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        DisplayName: '&7[&bVIP&6+&7]'
         Enchanted: false
       Index: 1
       GiveType: ONE # or RANDOM
@@ -97,6 +101,35 @@ case:
         - '[command] lp user %player% parent set %group%'
         - '[title] &aCongratulations!;&5you won %groupdisplayname%'
         - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
+      RandomActions: # GiveType: RANDOM
+        first:
+          Chance: 50
+          DisplayName: "something" # displayname for historydata displaying
+          Actions:
+            - '[command] say something'
+            - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+        second:
+          Chance: 50
+          Actions:
+            - '[command] say something'
+            - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+    Premium:
+      Group: premium
+      Chance: 20
+      Item:
+        ID: CYAN_WOOL
+        DisplayName: '&7[&3Premium&7]'
+      Index: 2
+      GiveType: ONE
+      Actions:
+        - '[command] lp user %player% parent set %group%'
+        - '[title] &aCongratulations!;&5you won %groupdisplayname%'
+        - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from
+        &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
       RandomActions: # GiveType: RANDOM
         first:
           Chance: 50
@@ -113,15 +146,17 @@ case:
       Group: deluxe
       Chance: 15
       Item:
-        ID: DIAMOND_SWORD # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
-        DisplayName: '&7&l[&5Deluxe&7&l]'
+        ID: PURPLE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        DisplayName: '&7[&5Deluxe&7]'
         Enchanted: false
-      Index: 2
+      Index: 3
       GiveType: ONE # or RANDOM
       Actions: # GiveType: ONE
         - '[command] lp user %player% parent set %group%'
         - '[title] &aCongratulations!;&5you won %groupdisplayname%'
         - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
       RandomActions: # GiveType: RANDOM
         first:
           Chance: 50
@@ -137,18 +172,48 @@ case:
       Group: legend
       Chance: 10
       Item:
-        ID: NETHERITE_SWORD # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
-        DisplayName: '&7&l[&dLegend&7&l]'
+        ID: PINK_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        DisplayName: '&7[&dLegend&7]'
         Enchanted: false
-      Index: 3
+      Index: 4
       GiveType: ONE # or RANDOM
       Actions: # GiveType: ONE
         - '[command] lp user %player% parent set %group%'
         - '[title] &aCongratulations!;&5you won %groupdisplayname%'
         - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
       RandomActions: # GiveType: RANDOM
         first:
           Chance: 50
+          Actions:
+            - '[command] say something'
+            - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+        second:
+          Chance: 50
+          Actions:
+            - '[command] say something'
+            - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
+    Ultra:
+      Group: ultra
+      Chance: 5
+      Item:
+        ID: RED_WOOL
+        DisplayName: '&7[&cUltra&7]'
+        Enchanted: true
+      Index: 5
+      GiveType: ONE
+      Actions:
+        - '[command] lp user %player% parent set %group%'
+        - '[command] say lp user %player% parent set %group%'
+        - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from
+        &5Ultra-Case.'
+      AlternativeActions: # GiveType: any, it doesn't matter; is performed if the group is lower in rank than the player's group in LevelGroups
+        - "[message] &cI'm sorry %player%, but you have group a stronger group than you won:("
+      RandomActions: # GiveType: RANDOM
+        first:
+          Chance: 50
+          DisplayName: "something" # displayname for historydata displaying
           Actions:
             - '[command] say something'
             - '[broadcast] &a>&c>&e> &c%player% &6won a donate %groupdisplayname% &6from &5Ultra-Case.'
