--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ softdepend:
   - PlaceholderAPI
   - CustomHeads
   - ProtocolLib
-  - HeadDataBase
+  - HeadDatabase
   - DecentHolograms
   - CMI
   - HolographicDisplays
